# finance_crm

./: my_models.py  mymodels.py  pyproject.toml
apps/appointment/: apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
apps/billing/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tables.py  urls.py  views.py
apps/business/: abstract_models.py  forms.py  models.py  urls.py  views.py
apps/core/: admin.py  columns.py  export.py  forms.py  mixins.py  models.py  tables.py  urls.py  utils.py  views.py  widgets.py
apps/crm/: admin.py  apps.py  filters.py  forms.py  signals.py  tables.py  urls.py  views.py
apps/leads/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tables.py  urls.py  views.py
apps/notification/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/subscription/: forms.py  models.py  urls.py
apps/tags/: admin.py  apps.py  forms.py  models.py  signals.py  tables.py  urls.py  views.py
apps/transactions/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  signals.py  tables.py  urls.py  views.py
apps/users/: admin.py  filters.py  forms.py  models.py  tables.py  urls.py  utils.py  views.py
apps/wilayas/: apps.py  models.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  local_settings.py  middleware.py  settings.py  urls.py  wsgi.py
fixtures/: communes.json  fake_data.json  modules_creneaux_fixtures.json  sample_data.json  wilayas.json
static/css/: style.css
static/js/: script.js  sidebar.js
templates/buttons/: action.html  delete.html
(+120 files in other folders)
